tests/error/type_errors/not_not_bool.py
import tests.error.util

from guppy.compiler import GuppyModule
from tests.error.util import NonBool

module = GuppyModule("test")
module.load(tests.error.util)


@module
def foo(x: NonBool) -> bool:
    return not x


module.compile(True)
